[package]
name = "i2c-hung-fix-for-embassy"
version = "0.1.0"
authors = ["apeng2012 <apeng2012@gmail.com>"]
edition = "2018"

description = "Attempts to unhang the I2C bus after an ungraceful reset."
categories = ["hardware-support", "embedded", "no-std"]
keywords = ["embedded-hal", "i2c", "io", "no_std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/apeng2012/i2c-hung-fix-for-embassy.rs"
documentation = "https://docs.rs/i2c_hung_fix"
homepage = "https://github.com/apeng2012/i2c-hung-fix-for-embassy.rs"
readme = "README.md"

[dependencies]
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
